# people-map-japan

./: .gitignore  LICENSE  README.md
app/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js
app/src/: app.css  app.html
app/src/lib/: About.svelte  Header.svelte  Search.svelte  global.d.ts
app/src/lib/header/: About.svelte  Header.svelte
app/src/lib/map/: Map.svelte  Random.svelte  Search.svelte  map.css  random.css  search.css  utils.ts
app/src/routes/: index.svelte
app/static/: mapstyle.json
app/static/data/: locations.json  people.geojson
preparation/: .gitignore  pyproject.toml
preparation/code/: 0_pref_munic_coords.ipynb  1_page_locations_raw.ipynb  2_page_locations_clean.ipynb  3_page_views.ipynb  4_people_for_map.ipynb  5_geojson.ipynb  _page_is_person.ipynb  utils.py
preparation/data/: people_for_map.json  pref_munic_coords.json  pref_munic_pages.json
preparation/data/workspace/: all_page_list.json  ambiguous_location_pages.json  no_location_pages.json  page_locations_clean.json  page_locations_raw.json
public/: index.html  people.js  style.css  style.json
