[tool.poetry]
name = "people-map"
version = "0.1.0"
license = "MIT"
description = "Scripts to prepare data for A People Map of Japan"
authors = ["Sorami Hisamoto <s@89.io>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.3.4"
requests = "^2.26.0"
tqdm = "^4.62.3"
SPARQLWrapper = "^1.8.5"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
